--- a/Inventory/src/main/resources/application.properties
+++ b/Inventory/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=groupc
-spring.datasource.password=postgres
+spring.datasource.username=postgres
+spring.datasource.password=gangrel89
 spring.jpa.properties.hibernate.default_schema=Inventory
 spring.jpa.show-sql=true
 
